// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRoom It renders the Rooms component correctly 1`] = `
<div>
  <div
    class="container-fluid d-flex flex-column align-items-center h-100 mb-5"
    id="add-room-container"
  >
    <h2
      class="text-center  mt-5 fw-bold fs-1 text-white text-uppercase"
      id="add-room-heading"
    >
      Add Room
    </h2>
    <hr
      id="add-room-hr"
    />
    <p
      class="text-center  fs-6 text-white"
    >
      Would you like to sell your hotel room to our website?
       
      <br />
      No need to wait. Fill the forms below your room will be added to our website accordingly!
       
      <br />
      And start earn some money today!
    </p>
    <form
      class="col-md-6 d-flex align-items-center flex-column justify-content-center"
      id="add-room-form"
    >
      <label
        class="text-white  col-md-8 mb-3"
        for="name"
      >
        Room Name:
         
        <br />
        <input
          class="col-12 bg-transparent-add-room rounded"
          id="name"
          placeholder="Deluxe Double Room"
          required=""
          type="text"
          value=""
        />
      </label>
      <label
        class="text-white  col-md-8 mb-3"
        for="description"
      >
        Room Description:
         
        <br />
        <input
          class="col-12 bg-transparent-add-room rounded"
          id="description"
          placeholder="Description"
          required=""
          type="text"
          value=""
        />
      </label>
      <label
        class="text-white  col-md-8 mb-3"
        for="image"
      >
        Room Image:
         
        <br />
        <input
          class="col-12 bg-transparent-add-room rounded"
          id="image"
          placeholder="Image URL"
          required=""
          type="text"
          value=""
        />
      </label>
      <label
        class="text-white  col-md-8 mb-3"
        for="size"
      >
        Room Size:
         
        <br />
        <input
          class="col-12 bg-transparent-add-room rounded"
          id="size"
          placeholder="In square meter"
          required=""
          type="text"
          value=""
        />
      </label>
      <label
        class="text-white  col-md-8 mb-3"
        for="view"
      >
        Room View:
         
        <br />
        <input
          class="col-12 bg-transparent-add-room rounded"
          id="view"
          placeholder="Sea, ocean.."
          required=""
          type="text"
          value=""
        />
      </label>
      <label
        class="text-white  col-md-8 mb-3"
        for="bedding"
      >
        Bedding Option:
         
        <br />
        <input
          class="col-12 bg-transparent-add-room rounded"
          id="bedding"
          placeholder="Double, triple, twin..."
          required=""
          type="text"
          value=""
        />
      </label>
      <button
        class="fw-bold"
        id="add-room-submit-btn"
        type="submit"
      >
        Submit
      </button>
    </form>
    <span />
  </div>
</div>
`;

exports[`AddRoom It renders the Rooms component correctly 2`] = `
<div
  className="container-fluid d-flex flex-column align-items-center h-100 mb-5"
  id="add-room-container"
>
  <h2
    className="text-center  mt-5 fw-bold fs-1 text-white text-uppercase"
    id="add-room-heading"
  >
    Add Room
  </h2>
  <hr
    id="add-room-hr"
  />
  <p
    className="text-center  fs-6 text-white"
  >
    Would you like to sell your hotel room to our website?
     
    <br />
    No need to wait. Fill the forms below your room will be added to our website accordingly!
     
    <br />
    And start earn some money today!
  </p>
  <form
    className="col-md-6 d-flex align-items-center flex-column justify-content-center"
    id="add-room-form"
    onSubmit={[Function]}
  >
    <label
      className="text-white  col-md-8 mb-3"
      htmlFor="name"
    >
      Room Name:
       
      <br />
      <input
        className="col-12 bg-transparent-add-room rounded"
        id="name"
        onChange={[Function]}
        placeholder="Deluxe Double Room"
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="text-white  col-md-8 mb-3"
      htmlFor="description"
    >
      Room Description:
       
      <br />
      <input
        className="col-12 bg-transparent-add-room rounded"
        id="description"
        onChange={[Function]}
        placeholder="Description"
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="text-white  col-md-8 mb-3"
      htmlFor="image"
    >
      Room Image:
       
      <br />
      <input
        className="col-12 bg-transparent-add-room rounded"
        id="image"
        onChange={[Function]}
        placeholder="Image URL"
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="text-white  col-md-8 mb-3"
      htmlFor="size"
    >
      Room Size:
       
      <br />
      <input
        className="col-12 bg-transparent-add-room rounded"
        id="size"
        onChange={[Function]}
        placeholder="In square meter"
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="text-white  col-md-8 mb-3"
      htmlFor="view"
    >
      Room View:
       
      <br />
      <input
        className="col-12 bg-transparent-add-room rounded"
        id="view"
        onChange={[Function]}
        placeholder="Sea, ocean.."
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="text-white  col-md-8 mb-3"
      htmlFor="bedding"
    >
      Bedding Option:
       
      <br />
      <input
        className="col-12 bg-transparent-add-room rounded"
        id="bedding"
        onChange={[Function]}
        placeholder="Double, triple, twin..."
        required={true}
        type="text"
        value=""
      />
    </label>
    <button
      className="fw-bold"
      id="add-room-submit-btn"
      type="submit"
    >
      Submit
    </button>
  </form>
  <span />
</div>
`;
